--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,4 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@import url("https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap");
